[package]
name = "solana_ass"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
solana-sdk = "1.18.14" #
base64 = "0.21"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0" 